--- a/WebApplication2/Web.config
+++ b/WebApplication2/Web.config
@@ -51,6 +51,6 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="MyDbConnectionString" connectionString="Server=localhost;Database=self_project;Uid=root;Pwd=zudaboys23;" providerName="MySql.Data.MySqlClient" />
+		<add name="MyDbConnectionString" connectionString="Server=localhost;Database=xxx;Uid=root;Pwd=xxx;" providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
