- Adding delete field person to - Fixing bug reset field (Company, Position, Address2&3) - Validate All field must have value except Address 2&3 - Adding toast for information notification

--- a/WebApplication2/WebApplication2.vbproj
+++ b/WebApplication2/WebApplication2.vbproj
@@ -272,6 +272,7 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="UploadInquiry.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
   </ItemGroup>
@@ -327,6 +328,13 @@
     <Compile Include="Site.Master.vb">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UploadInquiry.aspx.designer.vb">
+      <DependentUpon>UploadInquiry.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UploadInquiry.aspx.vb">
+      <DependentUpon>UploadInquiry.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.vb">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
