--- a/WebApplication2/bin/WebApplication2.dll.config
+++ b/WebApplication2/bin/WebApplication2.dll.config
@@ -51,6 +51,6 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="MyDbConnectionString" connectionString="Server=localhost;Database=self_project;Uid=root;Pwd=zudaboys23;" providerName="MySql.Data.MySqlClient" />
+		<add name="MyDbConnectionString" connectionString="Server=localhost;Database=451;Uid=root;Pwd=;" providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
