--- a/WebApplication2/WebApplication2.vbproj
+++ b/WebApplication2/WebApplication2.vbproj
@@ -195,7 +195,9 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DetailInquiryBlockingData.aspx" />
     <Content Include="Download.aspx" />
+    <Content Include="InquiryBlockingData.aspx" />
     <Content Include="Upload.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -280,11 +282,25 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.vb" />
     <Compile Include="App_Start\RouteConfig.vb" />
+    <Compile Include="DetailInquiryBlockingData.aspx.designer.vb">
+      <DependentUpon>DetailInquiryBlockingData.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DetailInquiryBlockingData.aspx.vb">
+      <DependentUpon>DetailInquiryBlockingData.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="Download.aspx.designer.vb">
       <DependentUpon>Download.aspx</DependentUpon>
     </Compile>
     <Compile Include="Download.aspx.vb">
       <DependentUpon>Download.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="InquiryBlockingData.aspx.designer.vb">
+      <DependentUpon>InquiryBlockingData.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="InquiryBlockingData.aspx.vb">
+      <DependentUpon>InquiryBlockingData.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Upload.aspx.designer.vb">
